@@ -30,6 +30,7 @@ Jump Start Changelog
 * Added new textures: Circles, Crystal, Hexagons, Polygons, Pyramids, Skulls, Tiles, and Waves
 * Improvements, structural changes, and option changes to header of Executive theme base.
 * Allow header in Entrepreneur theme base to be configured with no background color.
+* Allow copyright helpers `%site_title%` and `%year%` to work with content element of builder (for Footer Template Sync feature).
 * Mobile menu toggle button will now match menu highlight color on Entrepreneur base.
 * Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
 * Expanded "background" option type image sizing options.
